style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  cursor: default;
}

body {
  background-color: #274527;
}

.containerPlay {
  width: 1080px;
  display: flex;
  height: auto;
  margin: 40px auto;
  justify-content: center;
}

.containerCards {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 250px;
}

.containerAction {
  width: 510px;
  height: 700px;
  padding: 35px 48px;
  margin: 0 20px;
  border: 1px solid #a29f8e;
  border-radius: 30px;
}

.containerProgress {
  display: flex;
  justify-content: space-between;
  margin-bottom: 20px;
}

.containerRndLvs {
  display: flex;
  flex-direction: row;
  align-items: baseline;
}

.containerButtons {
  display: flex;
  justify-content: space-between;
}

.containerInfo {
  background-color: rgba(162, 159, 142, 0.3);
  max-width: 415px;
  height: 240px;
  padding: 30px 28px;
  margin-top: 5px;
  margin-bottom: 20px;
  border-radius: 8px;
  transition: 0.6s ease-out;
}

.containerScore {
  display: flex;
  width: 95px;
  justify-content: space-between;
  margin-bottom: 15px;
}

.lifeList {
  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
  font-size: 16px;
  color: #e9e4c3;
  letter-spacing: 0.05em;
  width: 412px;
  height: 100px;
  list-style: none;
  margin-left: 2px;
}

.lifeList.one {
  margin-top: 30px;
}

.spanList {
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  color: #fffdef;
}

.blJackTitle {
  display: flex;
  flex-direction: row;
  align-items: center;
  z-index: 10;
  position: absolute;
  font-family:'Courier New', Courier, monospace;
  color: rgba(162, 159, 142, 0.4);
  background-color: #274527;
  font-size: 72px;
  padding: 0 15px 0 12px;
  width: 412px;
  height: 200px;
  opacity: 1;
  transition: 0.8s ease-out;
}

.largeNr,
.info {
  color: #fffdef;
  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
  font-weight: 700;
}

.largeNr {
  font-size: 40px;
  padding: 0 10px;
}

.info {                 
  font-size: 20px;
  letter-spacing: 0.1em;
}

.info.extra {
  color:#eef1d5;
  text-shadow: 
    0 0 4px rgba(255, 253, 239, 0.5),
    0 0 4px #c60000;
  font-size: 32px;
  height: 34px;
}

.name {
  font-family:'Courier New', Courier, monospace;
  color: #fffdef;
  font-size: 30px;
  margin-top: 48px;
}

.smallSans {
  color: #e9e4c3;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  letter-spacing: 0.15em;
  font-size: 18px;
}

button {
  width: 104px;
  height: 66px;
  background-color: #f1edd5;
  font-family:'Courier New', Courier, monospace;
  color: #122012;
  font-size: 24px;
  font-weight: bold;
  border: none;
  border-radius: 8px;
  cursor: pointer;
}

#btnHit,
#btnStand {
  opacity: 0.3;
}

#btnReplay {
  opacity: 1;
}

.imgCard {
  height: 200px;
  background-color: #f1edd5;
  border-radius: 12px;
  box-shadow: 
    0 0 12px rgba(31, 38, 113, 0.5), 
    0 0 1px 0 #f1edd5;
  margin-top: -130px;
  margin-left: -48px;
}

.cardsPlayer,
.cardsDealer {
  display: flex;
  flex-direction:row;
  flex-wrap: wrap;
  max-width: 220px;
  width: 220px;
  padding-top: 130px;
  padding-left: 48px;
}

